// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be invalid for bad kind 1`] = `
Object {
  "kind": Object {
    "key": "yup:mixed.oneOf",
    "options": Object {
      "values": "photo, video, blog",
    },
  },
}
`;

exports[`should be invalid for bad resolution 1 1`] = `
Object {
  "resolution": Object {
    "key": "yup:array.min",
    "options": Object {
      "min": 2,
      "path": "resolution",
    },
  },
}
`;

exports[`should be invalid for bad resolution 2 1`] = `
Object {
  "resolution": Object {
    "key": "yup:array.min",
    "options": Object {
      "min": 2,
      "path": "resolution",
    },
  },
}
`;

exports[`should be invalid for bad resolution 3 1`] = `
Object {
  "resolution": Array [
    Object {
      "key": "yup:number.positive",
      "options": Object {
        "path": "resolution[0]",
      },
    },
  ],
}
`;

exports[`should be invalid for bad resolution 4 1`] = `
Object {
  "resolution": Array [
    Object {
      "key": "yup:number.integer",
      "options": Object {
        "path": "resolution[0]",
      },
    },
  ],
}
`;

exports[`should be invalid for bad uuid 1`] = `
Object {
  "id": "yup:string.uuid",
}
`;

exports[`should be invalid for bad weight 1`] = `
Object {
  "weight": Object {
    "key": "yup:number.integer",
    "options": Object {
      "path": "weight",
    },
  },
}
`;

exports[`should be invalid for empty url 1`] = `
Object {
  "url": "yup:string.nonEmpty",
}
`;

exports[`should be invalid for extra fields 1`] = `
Object {
  "undefined": Object {
    "key": "yup:object.noUnknown",
    "options": Object {
      "path": "this",
    },
  },
}
`;

exports[`should be invalid for undefined resolution 1`] = `
Object {
  "resolution": "yup:mixed.defined",
}
`;

exports[`should be invalid for undefined url 1`] = `
Object {
  "url": "yup:string.nonEmpty",
}
`;

exports[`should be invalid for undefined uuid 1`] = `
Object {
  "id": "yup:string.uuid",
}
`;
